--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -138,7 +138,7 @@
                     <footer>
 							<h2 style="text-align: center;">More About Our Partners</h2>
 							<p style="text-align: center;">"OFiDCrypt transcends the traditional affiliate model; we also cultivate deep, collaborative relationships with our<br />
-								<a href="../community.html">community connections</a>."</p>
+								"<a href="../community.html"><b>community connections</b></a>."</p>
 						</footer>
                     </footer>
                 </section>
