Updated community articles.

--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -137,8 +137,8 @@
                     <!-- More About Our Partners -->
                     <footer>
 							<h2 style="text-align: center;">More About Our Partners</h2>
-							<p style="text-align: center;">"OFiDCrypt transcends the traditional affiliate model; we also cultivate deep, collaborative relationships with our<br />
-								"<a href="../community.html"><b>community connections</b></a>."</p>
+							<p style="text-align: center;">OFiDCrypt transcends the traditional affiliate model; we also cultivate deep, collaborative relationships with our
+							<a href="../community.html"><b>community connections</b></a>.</p>
 						</footer>
                     </footer>
                 </section>
