--- a/monthly-posts-page2.html
+++ b/monthly-posts-page2.html
@@ -5,13 +5,12 @@
         <section class="monthly-posts">
             <article>
                 <header>
-                    <span class="date">August, 2024</span>
-                    <h2><a href="#">Kin Economy<br /> August Update</a></h2>
+                    <span class="date">August 2024</span>
+                    <h2><a href="#community-featured-image">Kin Economy<br /> August Update</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="Article Title: Kin Monthy Update for August" /></a>
-                <p>This article is published on Pennypost.</p>
-                <p>This article purchase supports the writer. Optionally, you can leave a tip at the end of the article to show gratitude to the contributor.</p>
-                <p>Code app required to purchase, download from <b><a href="https://getcode.com">here</a></b>.</p>
+                <a href="#" class="image fit"><img src="assets/images/monthlykin01.png" alt="Article Title: Kin Monthy Update for August" /></a>
+                <p><b>This article is unavailable.</b> Purchases support the writer. Optionally, you can leave a tip at the end of Pennypost articles to show gratitude to the contributor.</p>
+                <p>Code app required to purchase from Pennypost, download from <b><a href="https://getcode.com">here</a>.</b></p>
                 <ul class="actions special">
                     <li><a href="#"
                         class="button">Preview</a></li>
@@ -20,11 +19,11 @@
 
             <article>
                 <header>
-                    <span class="date">July, 2024</span>
+                    <span class="date">July 2024</span>
                     <h2><a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde">Kin Economy<br /> July Update</a></h2>
                 </header>
-                <a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde" class="image fit"><img src="assets/images/pic03.jpg" alt="Article Title: Kin Monthy Update for July" /></a>
-                <p>This article is published on Medium.</p>
+                <a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde" class="image fit"><img src="assets/images/julmonthlykin01.png" alt="Article Title: Kin Monthy Update for July" /></a>
+                <p><b>This article is published on Medium.</b></p>
                 <p>This article is available for free. Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
                 <ul class="actions special">
                     <li><a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde"
@@ -34,11 +33,11 @@
 
             <article>
                 <header>
-                    <span class="date">June, 2024</span>
+                    <span class="date">June 2024</span>
                     <h2><a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069">Kin Economy<br /> June Update</a></h2>
                 </header>
-                <a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069" class="image fit"><img src="assets/images/pic03.jpg" alt="Article Title: Kin Monthy Update for June" /></a>
-                <p>This article is published on Medium.</p>
+                <a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069" class="image fit"><img src="assets/images/junmonthlykin01.png" alt="Article Title: Kin Monthy Update for June" /></a>
+                <p><b>This article is published on Medium.</b></p>
                 <p>This article is available for free. Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
                 <ul class="actions special">
                     <li><a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069"
@@ -48,11 +47,11 @@
 
             <article>
                 <header>
-                    <span class="date">May, 2024</span>
+                    <span class="date">May 2024</span>
                     <h2><a href="https://medium.com/@kinshipsx/kin-economy-monthly-update-05-24-fc9860154955">Kin Economy<br /> May Update</a></h2>
                 </header>
                 <a href="https://medium.com/@kinshipsx/kin-economy-monthly-update-05-24-fc9860154955" class="image fit"><img src="assets/images/maymonthlykin01.png" alt="Article Title: Kin Monthy Update for May" /></a>
-                <p>This article is published on Medium.</p>
+                <p><b>This article is published on Medium.</b></p>
                 <p>This article is available for free. Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
                 <ul class="actions special">
                     <li><a href="https://medium.com/@kinshipsx/kin-economy-monthly-update-05-24-fc9860154955"
