Updated tip link and some url paths, added bold to some clickable items.

--- a/community.html
+++ b/community.html
@@ -156,7 +156,8 @@
 					<h2>Kin Monthly<br />
 						Updates</h2>
 					<p>Keep updated with the latest Kin news and developments.<br /> 
-						Updates written and published by <b>KinShips</b>, admin of the Official Kin Telegram Channel and <a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a> on 𝕏
+						Updates written and published by <a href="https://tipcard.getcode.com/x/KinShipsX"><b>KinShips</b></a>, 
+						admin of the <a href="https://t.me/KinCryptoTelegram">Kin Crypto Official</a> Telegram Channel and <a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a> on 𝕏
 					</p>
 				</header>
 				<div id="community-featured-image" class="image main">
@@ -186,14 +187,14 @@
 						<article>
 							<header>
 								<span class="date">Coming Soon</span>
-								<h2><a href="https://www.ofidcrypt.com/community.html#community-featured-button">Kin Economy<br /> December Update</a></h2>
+								<h2><a href="https://www.ofidcrypt.com/community.html#community-featured-image">Kin Economy<br /> December Update</a></h2>
 							</header>
-							<a href="https://www.ofidcrypt.com/community.html#community-featured-button" class="image fit"><img src="assets/images/pic02.jpg" alt="Article Title: Kin Monthy Update Coming Soon" /></a>
+							<a href="https://www.ofidcrypt.com/community.html#community-featured-image" class="image fit"><img src="assets/images/pic02.jpg" alt="Article Title: Kin Monthy Update Coming Soon" /></a>
 							<p><b>This article will be published on Pennypost.</b> 
 								Purchases support the writer. Optionally, you can leave a tip at the end of Pennypost articles to show gratitude to the contributor. 
 								Code app required to purchase from Pennypost, download from <b><a href="https://getcode.com">here</a>.</b></p>
 							<ul class="actions special">
-								<li><a href="https://www.ofidcrypt.com/community.html#community-featured-button"
+								<li><a href="https://www.ofidcrypt.com/community.html#community-featured-image"
 									class="button">Preview</a></li>
 							</ul>
 						</article>
@@ -201,14 +202,14 @@
 						<article>
 							<header>
 								<span class="date">Coming Soon</span>
-								<h2><a href="https://www.ofidcrypt.com/community.html#community-featured-button">Kin Economy<br /> November Update</a></h2>
+								<h2><a href="https://www.ofidcrypt.com/community.html#community-featured-image">Kin Economy<br /> November Update</a></h2>
 							</header>
-							<a href="https://www.ofidcrypt.com/community.html#community-featured-button" class="image fit"><img src="assets/images/pic02.jpg" alt="Article Title: Kin Monthy Update Coming Soon" /></a>
+							<a href="https://www.ofidcrypt.com/community.html#community-featured-image" class="image fit"><img src="assets/images/pic02.jpg" alt="Article Title: Kin Monthy Update Coming Soon" /></a>
 							<p><b>This article will be published on Pennypost.</b> 
 								Purchases support the writer. Optionally, you can leave a tip at the end of Pennypost articles to show gratitude to the contributor. 
 								Code app required to purchase from Pennypost, download from <b><a href="https://getcode.com">here</a>.</b></p>
 							<ul class="actions special">
-								<li><a href="https://www.ofidcrypt.com/community.html#community-featured-button"
+								<li><a href="https://www.ofidcrypt.com/community.html#community-featured-image"
 									class="button">Preview</a></li>
 							</ul>
 						</article>
