--- a/monthly-posts-page2.html
+++ b/monthly-posts-page2.html
@@ -6,15 +6,15 @@
             <article>
                 <header>
                     <span class="date">August 2024</span>
-                    <h2><a href="#">Kin Economy<br /> August Update</a></h2>
+                    <h2><a href="https://www.ofidcrypt.com/community.html#community-featured-image">Kin Economy<br /> August Update</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/monthlykin01.png"
+                <a href="https://www.ofidcrypt.com/community.html#community-featured-image" class="image fit"><img src="assets/images/monthlykin01.png"
                         alt="Article Title: Kin Monthy Update for August" /></a>
                 <p><b>This article is unavailable.</b> Purchases support the writer. 
                     Optionally, you can leave a tip at the end of Pennypost articles to show gratitude to the contributor. 
                     Code app required to purchase from Pennypost, download from <b><a href="https://getcode.com">here</a>.</b></p>
                 <ul class="actions special">
-                    <li><a href="#" class="button">Preview</a></li>
+                    <li><a href="https://www.ofidcrypt.com/community.html#community-featured-image" class="button">Preview</a></li>
                 </ul>
             </article>
 
@@ -27,9 +27,10 @@
                 <a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde"
                     class="image fit"><img src="assets/images/julmonthlykin01.png"
                         alt="Article Title: Kin Monthy Update for July" /></a>
-                <p><b>This article is published on Medium.</b> 
-                    This article is available for free. 
-                    Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
+                <p><b>This article is published on Medium</b> 
+                    and is available for free. 
+                    Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShipsX"><b>here</b></a> 
+                    to show gratitude to the contributor.</p>
                 <ul class="actions special">
                     <li><a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde"
                             class="button">Preview</a></li>
@@ -45,9 +46,10 @@
                 <a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069"
                     class="image fit"><img src="assets/images/junmonthlykin01.png"
                         alt="Article Title: Kin Monthy Update for June" /></a>
-                <p><b>This article is published on Medium.</b> 
-                    This article is available for free. 
-                    Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
+                <p><b>This article is published on Medium</b> 
+                    and is available for free. 
+                    Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShipsX"><b>here</b></a> 
+                    to show gratitude to the contributor.</p>
                 <ul class="actions special">
                     <li><a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069"
                             class="button">Preview</a></li>
@@ -63,9 +65,10 @@
                 <a href="https://medium.com/@kinshipsx/kin-economy-monthly-update-05-24-fc9860154955"
                     class="image fit"><img src="assets/images/maymonthlykin01.png"
                         alt="Article Title: Kin Monthy Update for May" /></a>
-                <p><b>This article is published on Medium.</b> 
-                    This article is available for free. 
-                    Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
+                <p><b>This article is published on Medium</b> 
+                    and is available for free. 
+                    Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShipsX"><b>here</b></a> 
+                    to show gratitude to the contributor.</p>
                 <ul class="actions special">
                     <li><a href="https://medium.com/@kinshipsx/kin-economy-monthly-update-05-24-fc9860154955"
                             class="button">Preview</a></li>
