--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 		<meta name="twitter:description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
 		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
 		<meta name="twitter:url" content="https://ofidcrypt.com">
+		
+                <!-- Partner Verification Meta Tags -->
+		<meta property="hvr-site-verification" content="1335145fefe220df614f86a7b0d3605d" />
 	
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
