Adjusted nav button position and js to account for alt colour on scroll. Adjusted pagination animations to match on each page.

--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -50,9 +50,9 @@
 		<link rel="icon" type="image/png" sizes="48x48" href="../favicon-48x48.png">
 		
 		<!-- Stylesheets -->
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css">
 		<noscript>
-			<link rel="stylesheet" href="../assets/css/noscript.css" />
+			<link rel="stylesheet" href="../assets/css/noscript.css">
 		</noscript>
 		
 		<!-- JavaScript Libraries -->
