--- a/community.html
+++ b/community.html
@@ -340,14 +340,17 @@
 					const container = document.getElementById('monthly-container');
 					if (!container) {
 						console.error("Container element not found");
-						return; // If container doesn't exist, stop execution
+						return;
 					}
 
 					let currentPage = '1';
 					const totalPages = 2; // Adjust this to the actual number of pages
 
+					// Flag to prevent scroll events during transition
+					let isTransitioning = false;
+
 					function loadPage(pageNumber, shouldScroll = true) {
-						if (!container) return; // Early return if container is null
+						if (!container) return;
 
 						let url;
 						if (pageNumber === '1') {
@@ -356,63 +359,49 @@
 							url = `monthly-posts-page${pageNumber}.html`;
 						}
 
-						// Store the original height before any changes
-						const originalHeight = container.offsetHeight;
-						// Set a minimum height to prevent content shift
-						container.style.minHeight = `${originalHeight}px`;
-						// Start the fade-out effect
 						container.classList.add('fade-out');
+						isTransitioning = true; // Start of transition
 
 						fetch(url)
-							.then(response => {
-								if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
-								return response.text();
-							})
+							.then(response => response.text())
 							.then(data => {
 								const parser = new DOMParser();
 								const doc = parser.parseFromString(data, 'text/html');
 								let newContent = '';
 
 								if (pageNumber === '1') {
-									const content = doc.getElementById('monthly-community-posts');
-									newContent = content ? content.querySelector('section.monthly-posts')?.outerHTML || '' : '';
+									newContent = doc.getElementById('monthly-community-posts').querySelector('section.monthly-posts').outerHTML;
 								} else {
 									const pageContent = doc.getElementById(`monthly-posts-page${pageNumber}-monthly-posts`);
-									newContent = pageContent ? pageContent.innerHTML :
-										(doc.querySelector('section.monthly-posts')?.outerHTML || '');
+									if (pageContent) {
+										newContent = pageContent.innerHTML;
+									} else {
+										newContent = doc.body.innerHTML || doc.querySelector('.monthly-posts').innerHTML;
+									}
 								}
 
-								// Update the content
-								container.innerHTML = `<div id="monthly-community-posts">${newContent}</div>`;
-
-								// Check the new height and adjust the minHeight if necessary
-								const newHeight = container.offsetHeight;
-								if (newHeight < originalHeight) {
-									container.style.minHeight = `${originalHeight}px`;
-								} else {
-									container.style.minHeight = `${newHeight}px`;
-								}
-
-								// Complete the fade-out, then fade-in
 								setTimeout(() => {
+									container.innerHTML = `<div id="monthly-community-posts">${newContent}</div>`;
 									container.classList.remove('fade-out');
 									container.classList.add('fade-in');
 
 									setTimeout(() => {
 										container.classList.remove('fade-in');
-										container.style.minHeight = ''; // Reset minHeight after transition
+										isTransitioning = false; // End of transition
+
 										if (shouldScroll) {
 											scrollToFeaturedPost();
 										}
-										updatePagination(pageNumber);
-									}, 300); // Adjust this based on your CSS transition duration
 
-								}, 100); // A slight delay to ensure the fade-out has started
+										updatePagination(pageNumber);
+									}, 500); // Delay for fade-in animation
+
+								}, 500); // Delay for fade-out animation
 							})
 							.catch(error => {
 								console.error('Error loading page:', error);
 								container.classList.remove('fade-out');
-								container.style.minHeight = ''; // Reset minHeight on error
+								isTransitioning = false; // End of transition in case of error
 							});
 					}
 
@@ -431,38 +420,35 @@
 						currentPage = pageNumber;
 					}
 
-					function setupPaginationListeners() {
-						document.querySelectorAll('.pagination .page').forEach(pageLink => {
-							pageLink.addEventListener('click', function (event) {
-								event.preventDefault();
-								const pageNumber = this.getAttribute('data-page');
-								loadPage(pageNumber);
-							});
+					// Event listeners for pagination
+					document.querySelectorAll('.pagination .page').forEach(pageLink => {
+						pageLink.addEventListener('click', function (event) {
+							event.preventDefault();
+							const pageNumber = this.getAttribute('data-page');
+							loadPage(pageNumber, true);
 						});
+					});
 
-						document.querySelectorAll('.pagination .previous').forEach(prevLink => {
-							prevLink.addEventListener('click', function (event) {
-								event.preventDefault();
-								if (currentPage > '1') {
-									loadPage((parseInt(currentPage) - 1).toString());
-								}
-							});
+					document.querySelectorAll('.pagination .previous').forEach(prevLink => {
+						prevLink.addEventListener('click', function (event) {
+							event.preventDefault();
+							if (currentPage > '1') {
+								loadPage((parseInt(currentPage) - 1).toString(), true);
+							}
 						});
+					});
 
-						document.querySelectorAll('.pagination .next').forEach(nextLink => {
-							nextLink.addEventListener('click', function (event) {
-								event.preventDefault();
-								if (parseInt(currentPage) < totalPages) {
-									loadPage((parseInt(currentPage) + 1).toString());
-								}
-							});
+					document.querySelectorAll('.pagination .next').forEach(nextLink => {
+						nextLink.addEventListener('click', function (event) {
+							event.preventDefault();
+							if (parseInt(currentPage) < totalPages) {
+								loadPage((parseInt(currentPage) + 1).toString(), true);
+							}
 						});
-					}
+					});
 
 					loadPage('1', false); // Load the first page without scrolling
-					setupPaginationListeners(); // Setup pagination after initial load to ensure all elements exist
 				});
-
 			</script>
 
 			<!-- Link to non-critical JavaScript files -->
