Dark mode released on home page.

--- a/community.html
+++ b/community.html
@@ -68,6 +68,11 @@
 					<img src="assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
 				</header>
 
+					<!-- Your Dark Mode Toggle Button -->
+					<a href="#darkModePanel" id="darkModeToggle" class="alt">
+						<i class="fas fa-sun"></i>
+					</a>
+
 				<!-- Nav -->
 				<nav id="nav">
 					<ul class="links">
@@ -156,7 +161,7 @@
 					<h2>Kin Monthly<br />
 						Updates</h2>
 					<p>Keep updated with the latest Kin news and developments.<br /> 
-						Updates written and published by <a href="https://tipcard.getcode.com/x/KinShipsX"><b>KinShips</b></a>, 
+						Updates written and published by <a href="https://tipcard.getcode.com/x/KinShipsX"><b>KinShip</b></a>, 
 						admin of the <a href="https://t.me/KinCryptoTelegram">Kin Crypto Official</a> Telegram Channel and <a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a> on 𝕏
 					</p>
 				</header>
