--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -75,6 +75,11 @@
 					<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
 				</header>
 
+					<!-- Your Dark Mode Toggle Button -->
+					<a href="#darkModePanel" id="darkModeToggle" class="alt">
+						<i class="fas fa-sun"></i>
+					</a>
+
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
