Adjusted VIP Code button image and styling for consistent look on light and dark mode.

--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -144,16 +144,19 @@
 							<!-- Section Heading -->
 							<header>
 								<h2 class="align-center">Get Ahead</h2>
-								<p class="align-center"></p>The Code Wallet app is available for free on the App Store and Google play, and will unlock access to cash link giveaways, contests, exclusive content and more.
-								<p class="align-center">🚧 <br><b>Under Construction</b> <br>
-									Click the button below to be ready for a whole new level of access, interaction and crypto sharing between you, your friends, and the internet. We will grow together.</p>
+								<p class="align-center">The Code Wallet app is available for free on the App Store and Google play, and will unlock access to cash link giveaways, contests, exclusive content and more.</p>
+								<p class="align-center">Click the button below to be ready for a whole new level of access, interaction and crypto sharing between you, your friends, and the internet. We will grow together.</p>
 							</header>
 
 							<div class="image main">
 								<a href="https://getcode.com" target="_blank">
-									<img src="../assets/images/pic10.jpg" alt="Login Button Image for Code Wallet" />
+									<img src="../assets/images/pic10.png" alt="Login Button Image for Code Wallet" />
 								</a>
 							</div>
+							<p class="align-center">🚧 <b>Under Construction</b><br /> 
+								Don't have the Code App yet?<br /> 
+								<a href="https://getcode.com" target="_blank">Download It Now</a></p>
+
 						</section>
 						</div>
 
