Formatting fixes and h2 a additional formatting class added.

--- a/community.html
+++ b/community.html
@@ -126,16 +126,16 @@
 				<table>
 					<thead>
 						<tr>
-							<th colspan="2"><h2>Join ⬢ Follow ⬢ Visit</h2></th> 
+							<th colspan="2"><h2>Get Connected</h2></th> 
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td>Telegram</td>
+							<td>Join on Telegram</td>
 							<td><a href="https://t.me/KinCryptoTelegram">Kin Crypto Official</a></td>
 						</tr>
 						<tr>
-							<td>𝕏</td>
+							<td>Follow on 𝕏</td>
 							<td><a href="https://x.com/Kin_Ecosystem">Kin_Ecosystem</a></td>
 						</tr>
 						<tr>
@@ -333,7 +333,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="/pages/affiliate.html">Affiliate</a></li><li><a href="/community.html">Community</a></li> <li><a href="#">Disclaimers</a></li> <li><a href="/pages/about.html">About</a></li></ul>
+					<ul><li><a href="/pages/affiliate.html">Affiliate</a></li><li><a href="/community.html">Community</a></li> <li><a href="#">Contests</a></li> <li><a href="/pages/about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
