--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -143,7 +143,7 @@
                     <footer>
 							<h2 style="text-align: center;">More About Our Partners</h2>
 							<p style="text-align: center;">OFiDCrypt transcends the traditional affiliate model; we also cultivate deep, collaborative relationships with our
-							<a href="../community.html"><b>community connections</b></a>.</p>
+							<a href="../community.html">Community Connections</a>.</p>
 						</footer>
                     </footer>
                 </section>
@@ -219,7 +219,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="affiliate.html">Affiliate</a></li><li><a href="../community.html">Community</a></li><li><a href="#">Disclaimers</a></li><li><a href="about.html">About</a></li></ul>
+					<ul><li><a href="affiliate.html">Affiliate</a></li><li><a href="../community.html">Community</a></li><li><a href="#">Contests</a></li><li><a href="about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
