--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -148,17 +148,18 @@
 								<p class="align-center">Click the button below to be ready for a whole new level of access, interaction and crypto sharing between you, your friends, and the internet. We will grow together.</p>
 							</header>
 
-							<div class="image main">
+							<div class="image button-image">
 								<a href="https://getcode.com" target="_blank">
 									<img src="../assets/images/pic10.png" alt="Login Button Image for Code Wallet" />
 								</a>
 							</div>
-							<p class="align-center">🚧 <b>Under Construction</b><br /> 
+							
+							<p class="align-center">🚧 <b>Under Construction</b> 🚧<br /> 
 								Don't have the Code App yet?<br /> 
 								<a href="https://getcode.com" target="_blank">Download It Now</a></p>
 
 						</section>
-						</div>
+					</div>
 
 				<!-- Footer -->
 				<footer id="footer">
@@ -229,7 +230,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="affiliate.html">Affiliate</a></li><li><a href="../community.html">Community</a></li><li><a href="#">Disclaimers</a></li><li><a href="about.html">About</a></li></ul>
+					<ul><li><a href="affiliate.html">Affiliate</a></li><li><a href="../community.html">Community</a></li><li><a href="#">Contests</a></li><li><a href="about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
