--- a/pages/about.html
+++ b/pages/about.html
@@ -210,7 +210,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="affiliate.html">Affiliate</a></li><li><a href="../community.html">Community</a></li><li><a href="#">Disclaimers</a></li><li><a href="about.html">About</a></li></ul>
+					<ul><li><a href="affiliate.html">Affiliate</a></li><li><a href="../community.html">Community</a></li><li><a href="#">Contests</a></li><li><a href="about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
