--- a/community.html
+++ b/community.html
@@ -161,7 +161,7 @@
 					<h2>Kin Monthly<br />
 						Updates</h2>
 					<p>Keep updated with the latest Kin news and developments.<br /> 
-						Updates written and published by <a href="https://tipcard.getcode.com/x/KinShipsX"><b>KinShip</b></a>, 
+						Updates written and published by <a href="https://tipcard.getcode.com/x/KinShipsX">KinShip</a>, 
 						admin of the <a href="https://t.me/KinCryptoTelegram">Kin Crypto Official</a> Telegram Channel and <a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a> on 𝕏
 					</p>
 				</header>
