--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -115,7 +115,7 @@
 									<h2 class="align-center">What is Code Wallet?</h2>
 									<!-- Section Description -->
 									<p class="align-center">Code Wallet enables you to be able to sign in to a new era of online services where you can interact and make purchases in just a tap! 
-										People are already using it with Pennypost, the home of <a href="../index.html#pagination-controls-top"><b>OFiDCrypt Articles</b></a>. 
+										People are already using it with Pennypost, the home of <a href="../index.html#pagination-controls-top">OFiDCrypt Articles</a>. 
 										This is barely scratching the surface of what's to come. Check out the official trailer by Code Inc. below.</p>
 								</header>
 								<div class="video main">
