--- a/posts-page2.html
+++ b/posts-page2.html
@@ -6,9 +6,22 @@
             <article>
                 <header>
                     <span class="date">February 29, 2104</span>
+                    <h2><a href="index.html#pagination-controls-top">More Articles<br /> Coming soon</a></h2>
+                </header>
+                <a href="index.html#pagination-controls-top" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
+                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <ul class="actions special">
+                    <li><a href="index.html#pagination-controls-top"
+                        class="button">Coming Soon</a></li>
+                </ul>
+            </article>
+
+            <article>
+                <header>
+                    <span class="date">February 29, 2104</span>
                     <h2><a href="#">More Articles<br /> Coming soon</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
+                <a href="index.html#pagination-controls-top" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
                     <li><a href="#"
@@ -19,25 +32,12 @@
             <article>
                 <header>
                     <span class="date">February 29, 2104</span>
-                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
+                    <h2><a href="index.html#pagination-controls-top">More Articles<br /> Coming soon</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
+                <a href="index.html#pagination-controls-top" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li><a href="#"
-                        class="button">Coming Soon</a></li>
-                </ul>
-            </article>
-
-            <article>
-                <header>
-                    <span class="date">February 29, 2104</span>
-                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
-                </header>
-                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
-                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
-                <ul class="actions special">
-                    <li><a href="#"
+                    <li><a href="index.html#pagination-controls-top"
                         class="button">Coming Soon</a></li>
                 </ul>
             </article>
@@ -45,12 +45,12 @@
             <article>
                 <header>
                     <span class="date">February 29, 2104</span>
-                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
+                    <h2><a href="index.html#pagination-controls-top">More Articles<br /> Coming soon</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
+                <a href="index.html#pagination-controls-top" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li><a href="#"
+                    <li><a href="index.html#pagination-controls-top"
                         class="button">Coming Soon</a></li>
                 </ul>
             </article>
