--- a/community.html
+++ b/community.html
@@ -82,7 +82,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">Learn</a></li>
 				<li><a href="pages/vipwithcode.html">VIP Area</a></li>
 				<li><a href="pages/affiliate.html">Affiliate</a></li>
 				<li class="active"><a href="community.html">Community</a></li>
