--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -83,7 +83,7 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="links">
-					<li><a href="../index.html">Home</a></li>
+					<li><a href="../index.html">Learn</a></li>
 					<li><a href="vipwithcode.html">VIP Area</a></li>
 					<li><a href="affiliate.html">Affiliate</a></li>
 					<li><a href="../community.html">Community</a></li>
