Updated filepaths and remove livestream placeholder URL to remove error when no stream is present.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -108,7 +108,7 @@
 						<section class="livestream">
 							<div class="video main">
 								<img src="../assets/images/bglogo02-lowres.png" alt="Livestream Placeholder" class="placeholder">
-								<iframe id="xstream" width="100%" frameborder="0" allowfullscreen src="YOUR_X_EMBED_URL"></iframe>
+								<iframe id="xstream" width="100%" frameborder="0" allowfullscreen src="#"></iframe>
 							</div>
 								  
 								  <!-- Revert video placeholder to poster image after video ends -->
