Amended the livestream page and scaled image for desktop for placeholder.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -85,9 +85,9 @@
 				<ul class="links">
 					<li><a href="../index.html">Learn</a></li>
 					<li><a href="vipwithcode.html">VIP Area</a></li>
-					<li><a href="affiliate.html">Affiliate</a></li>
 					<li><a href="../community.html">Community</a></li>
 					<li class="active"><a href="livestream.html">𝕏 Livestream</a></li>
+					<li><a href="affiliate.html">Affiliate</a></li>
 					<li><a href="about.html">About Us</a></li>
 				</ul>
 				<ul class="icons">
@@ -107,8 +107,8 @@
 						<!-- Section Title -->
 						<section class="livestream">
 							<div class="video main">
-								<img src="../assets/images/bglogo02-lowres.png" alt="Livestream Placeholder" class="placeholder">
-								<iframe id="xstream" width="100%" frameborder="0" allowfullscreen src="#"></iframe>
+								<img src="../assets/images/kincontest01.gif" alt="Livestream Placeholder" class="placeholder">
+								<iframe id="xstream" width="100%" frameborder="0" allowfullscreen src=""></iframe>
 							</div>
 								  
 								  <!-- Revert video placeholder to poster image after video ends -->
@@ -132,9 +132,10 @@
 									<h2>𝕏 Livestream: <br /> 
 										Welcome</h2>
 									<!-- Section Description -->
-									<p>We will keep users informed with exciting upcoming contests and giveaways here.</p>
+									<p class="align-center">⚠️ Contest Not Live: In Development ⚠️</p>
+									<p class="align-center">You can see the beta documentation for the contest structure <a href="https://github.com/OFiDCrypt/kin-perk-sweeps/blob/main/KIN%20Sweepstakes%20-%20Program%20Introduction%20%26%20Whitepaper%20v1.0.0.pdf">here</a>.</p>
 									<h2>Event Schedule</h2>
-									<p>A contest event calendar will be available.</p>
+									<p>We will keep our community informed with exciting upcoming contests and giveaways, and contest event calendar will be available here.</p>
 								</header>
 							</section>
 					</div>
