--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -91,7 +91,7 @@
 					<li><a href="about.html">About Us</a></li>
 				</ul>
 				<ul class="icons">
-					<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
+					<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 					<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands fa-facebook-f"><span
 								class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span
@@ -198,8 +198,7 @@
 			<section>
 				<h3>Social</h3>
 				<ul class="icons alt">
-					<li><a href="https://x.com/OFiDCrypt" class="icon brands alt fa-twitter"><span
-								class="label">X</span></a></li>
+					<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 					<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
 								class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span
