--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
 						</ul>
 						<ul class="icons">
 							<li>
+								<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
+								  <img src="/assets/images/hvr-logo01.png" alt="Hvr Logo" class="custom-site-icon">
+								</a>
+							  </li>
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 							<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -295,6 +299,11 @@
 						<section>
 							<h3>Social</h3>
 							<ul class="icons alt">
+								<li>
+									<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
+									  <img src="/assets/images/hvr-logo01.png" alt="Hvr Logo" class="custom-site-icon">
+									</a>
+								  </li>
 								<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 								<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
