Updated social icons for Hvr and some padding and positioning tweaks.

--- a/community.html
+++ b/community.html
@@ -90,6 +90,11 @@
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
+				<li>
+					<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
+					  <img src="/assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
+					</a>
+				  </li>
 				<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 				<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands fa-facebook-f"><span
 							class="label">Facebook</span></a></li>
@@ -166,7 +171,7 @@
 
 				<!-- More About Our Partners -->
 				<h2 style="text-align: center;">More Ways to Engage</h2>
-				<p style="text-align: center;">OFiDCrypt actively works on developing promotions and contests for
+				<p style="text-align: center;">OFiDCrypt actively works on developing and streaming <a href="/pages/livestream.html">Promotions & Contests</a> for
 					community participation, in collaboration with other contributors.</p>
 			</section>
 			</section>
@@ -362,10 +367,13 @@
 					<h3>Telegram</h3>
 					<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
 				</section>
-				<section>
-					<h3>Discord</h3>
-					<p><a href="https://discordapp.com/users/1287308732275101777">@OFiDCrypt</a></p>
-				</section>
+						<!-- Hvr -->
+						<section>
+							<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
+								<img src="/assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img" class="custom-site-icon-contact">
+							</a>
+							<p><a href="https://discordapp.com/users/1287308732275101777">OFiDCrypt</a></p>
+						</section>	
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
