--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<ul class="icons">
 							<li>
 								<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
-								  <img src="/assets/images/hvr-logo01.png" alt="Hvr Logo" class="custom-site-icon">
+								  <img src="/assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
 								</a>
 							  </li>
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
@@ -292,18 +292,16 @@
 							<h3>Telegram</h3>
 							<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
 						</section>
+						<!-- Hvr -->
 						<section>
-							<h3>Discord</h3>
-							<p><a href="https://discordapp.com/users/1287308732275101777">@OFiDCrypt</a></p>
-						</section>
+							<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
+								<img src="/assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img" class="custom-site-icon-contact">
+							</a>
+							<p><a href="https://discordapp.com/users/1287308732275101777">OFiDCrypt</a></p>
+						</section>											
 						<section>
 							<h3>Social</h3>
 							<ul class="icons alt">
-								<li>
-									<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
-									  <img src="/assets/images/hvr-logo01.png" alt="Hvr Logo" class="custom-site-icon">
-									</a>
-								  </li>
 								<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 								<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
