--- a/pages/about.html
+++ b/pages/about.html
@@ -91,6 +91,11 @@
 							<li class="active"><a href="about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
+							<li>
+								<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
+								  <img src="../assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
+								</a>
+							  </li>
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 							<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -135,7 +140,7 @@
 								<header>
 									<h2>Learn, Earn & Spend</h2>
 									<!-- Section Description -->
-									<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
+									<p>Discover the world of cryptocurrency through our <a href="../index.html#pagination-controls-top">OFiDCrypt Articles</a> and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
 									<h2>Who is Tokin ⬢</h2>
 									<p>Tokin ⬢ is the official alias of the OFiDCrypt creator, <b><a href="https://x.com/OFiDCrypt">Verified by ID</a></b> on <b>𝕏</b></p>
 								</header>
@@ -193,10 +198,13 @@
 							<h3>Telegram</h3>
 							<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
 						</section>
+						<!-- Hvr -->
 						<section>
-							<h3>Discord</h3>
-							<p><a href="https://discordapp.com/users/1287308732275101777">@OFiDCrypt</a></p>
-						</section>
+							<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
+								<img src="../assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img" class="custom-site-icon-contact">
+							</a>
+							<p><a href="https://discordapp.com/users/1287308732275101777">OFiDCrypt</a></p>
+						</section>	
 						<section>
 							<h3>Social</h3>
 							<ul class="icons alt">
